src/test/deca/syntax/invalid/homemade/test/test_complet_affectation_float_arrondi_negatif.deca
{
    float x  = -0.7e-45;
    println("x = ", (x));
}